# semantic

./: .gitignore  README.md  docker-compose.yml  populate_items.py  pyproject.toml
.github/workflows/: ci.yml
app/: deps.py  main.py
app/api/: items.py  routes.py  search.py
app/core/: config.py  db.py
app/models/: item.py
app/services/: embeddings.py  text_builder.py
tests/: conftest.py  test_empty.py  test_search.py  test_search_soft.py
