[project]
name = "semantic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.2",
    "openai>=2.6.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.3",
    "pydantic-ai-slim[openai]>=1.9.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
  "tests"
]
